--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Snakes and Ladders</h1>
+  <h1>Linter</h1>
 
   
-  <script src="linter.js"></script>
+  <script src="linter2.js"></script>
 </body>
 </html>
